--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy - Techyatralabs Apps</title>
+  <title>Privacy Policy - Techyatra Labs</title>
   <style>
     body { background-color: #f9f9f9; color: #333; font-family: "Helvetica Neue", Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; }
     .container { max-width: 800px; margin: 40px auto; background-color: #fff; padding: 30px 40px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
@@ -24,68 +24,68 @@
     <p><em>Last updated: May 14, 2025</em></p>
 
     <h2>Introduction</h2>
-    <p>Welcome to Techyatralabs ("we", "our", or "us"). This Privacy Policy explains how we collect, use, and protect your information when you use any mobile or web application developed by us (collectively, the "Apps"). These apps may serve a variety of functions such as education, productivity, communication, or resource management.</p>
+    <p>Welcome to Eurokids Gatthaghar, Discovery Montessori, Lincoln Int'l School ("we", "our", or "us") app developed  by Techyatra Labs. Designed for parents and teachers in Kathmandu, Nepal, to access attendance tracking, billing, homework management, and study materials with ease, our app respects the privacy and security of all users—parents, teachers, and children. This Privacy Policy explains what information we collect, how we use it, with whom we share it, and your choices regarding your data when you use the Euro Kids Gatthaghar mobile application (the "App").</p>
 
     <h2>1. Information We Collect</h2>
     <ul>
-      <li><strong>Account Information:</strong> Your name, email, phone number, and user role where applicable.</li>
-      <li><strong>User Content:</strong> Submissions, uploaded content, messages, and user activity within the app.</li>
-      <li><strong>Child Information:</strong> If applicable, child’s name, date of birth, grade, and other education-related data.</li>
-      <li><strong>Billing Details:</strong> Payment methods, billing address, and transaction history (processed securely via third-party).</li>
-      <li><strong>Device & Usage Data:</strong> Device type, operating system, IP address, and app usage metrics.</li>
+      <li><strong>Account Information:</strong> Your name, email, phone number, and role (parent or teacher).</li>
+      <li><strong>Child Information:</strong> Child’s name, date of birth, grade, and attendance records.</li>
+      <li><strong>Billing Details:</strong> Payment method, billing address, transaction history (processed securely via third-party).</li>
+      <li><strong>Homework & Study Materials:</strong> Homework submissions, grades, teacher comments.</li>
+      <li><strong>Device & Usage Data:</strong> Device type, OS version, IP address, usage analytics.</li>
     </ul>
 
     <h2>2. How We Use Your Information</h2>
     <ul>
-      <li><strong>Service Delivery & Improvement:</strong> To deliver and enhance app functionality.</li>
-      <li><strong>User Support & Communication:</strong> Responding to queries, notifications, and service messages.</li>
-      <li><strong>Payments:</strong> Processing subscriptions, payments, or refunds.</li>
-      <li><strong>Analytics:</strong> Understanding user behavior and improving features.</li>
+      <li><strong>Service Delivery & Improvement:</strong> To provide and optimize features.</li>
+      <li><strong>Notifications & Communication:</strong> Attendance alerts, billing reminders, support.</li>
+      <li><strong>Payment Facilitation:</strong> Process subscriptions and refunds.</li>
+      <li><strong>Analytics & Insights:</strong> Analyze usage patterns to enhance functionality.</li>
     </ul>
 
     <h2>3. Legal Basis for Processing</h2>
     <ul>
-      <li><strong>Consent:</strong> Obtained during sign-up or feature use.</li>
-      <li><strong>Contractual Obligation:</strong> Necessary to fulfill our service agreements.</li>
-      <li><strong>Legal Compliance:</strong> For financial, tax, and data protection obligations.</li>
+      <li><strong>Consent:</strong> Explicit consent when registering or using features.</li>
+      <li><strong>Contractual Necessity:</strong> Fulfill service agreement for paid features.</li>
+      <li><strong>Legal Compliance:</strong> Comply with laws (e.g., financial records).</li>
     </ul>
 
     <h2>4. Data Sharing and Disclosure</h2>
     <ul>
-      <li><strong>Service Providers:</strong> Trusted third parties for hosting, payment processing, or analytics, bound by confidentiality agreements.</li>
-      <li><strong>Legal Requirements:</strong> When required by law, subpoena, or legal process.</li>
-      <li><strong>No Sale of Personal Data:</strong> We do not sell or rent personal data to third parties.</li>
+      <li><strong>Third-Party Providers:</strong> Payment, hosting, analytics under confidentiality agreements.</li>
+      <li><strong>Legal Requirements:</strong> Comply with laws, court orders, governmental requests.</li>
+      <li><strong>No Sale of Personal Data:</strong> We never sell or rent personal information.</li>
     </ul>
 
     <h2>5. Children’s Privacy & COPPA/GDPR Compliance</h2>
-    <p>Some of our apps may involve the collection of data from children under 13. We ensure compliance with COPPA and GDPR by requiring verifiable parental or guardian consent before collecting such data.</p>
+    <p>We collect children’s data only with parental or teacher direction and verifiable consent, in line with COPPA and GDPR guidelines. For data subjects under 13, we verify parental authorization.</p>
 
     <h2>6. Cookies and Tracking Technologies</h2>
-    <p>Our apps may use cookies or similar technologies for preferences, performance improvements, and analytics. Users may manage preferences via device settings.</p>
+    <p>Our App may use cookies and similar technologies to remember preferences, improve performance, and analyze traffic. You may disable non-essential cookies via device settings.</p>
 
     <h2>7. Data Security and Retention</h2>
-    <p>We implement encryption, authentication, and access controls to protect your data. Data is retained as long as necessary for its intended purpose unless otherwise requested or legally required.</p>
+    <p>We implement encryption, secure authentication, and regular audits to protect your data. We retain data as long as necessary; deletion requests are processed within 30 days, except for legally required records.</p>
 
     <h2>8. Data Breach Notification</h2>
-    <p>If a data breach occurs, we will notify affected users and relevant authorities within 72 hours, in compliance with applicable laws.</p>
+    <p>In the unlikely event of a data breach, we will notify affected users and authorities within 72 hours of discovery.</p>
 
     <h2>9. Your Rights and Choices</h2>
     <ul>
-      <li><strong>Access & Correction:</strong> Review or update your data via the app or by contacting us.</li>
-      <li><strong>Data Portability:</strong> Request an export of your personal data.</li>
-      <li><strong>Deletion & Restriction:</strong> Request deletion or limited use of your data.</li>
-      <li><strong>Marketing Opt‑Out:</strong> Email <a href="mailto:support@techyatralabs.com">support@techyatralabs.com</a> to opt out of promotional emails.</li>
+      <li><strong>Access & Correction:</strong> View/update your data via the App.</li>
+      <li><strong>Data Portability:</strong> Request export of your data.</li>
+      <li><strong>Deletion & Restriction:</strong> Request deletion or restriction of processing.</li>
+      <li><strong>Marketing Opt‑Out:</strong> Email <a href="mailto:support@techyatralabs.com">support@techyatralabs.com</a>.</li>
     </ul>
 
     <h2>10. External Links and Third‑Party Sites</h2>
-    <p>Some apps may contain links to third-party sites. We are not responsible for their privacy practices or content. Users should review third-party policies individually.</p>
+    <p>Our App may link to third‑party sites. We are not responsible for their content or privacy practices. Please review their policies.</p>
 
     <h2>11. Changes to This Policy</h2>
-    <p>We may update this Privacy Policy to reflect changes in practices, legal requirements, or feature updates. Users will be notified at least 15 days prior to changes taking effect.</p>
+    <p>We may update this policy for practice, feature, or legal changes. We will notify you at least 15 days before implementation.</p>
 
     <h2>12. Contact Us</h2>
     <div class="contact">
-      <p><strong>Techyatralabs</strong></p>
+      <p><strong>Techyatralabs</strong> (Developer of Eurokids Gatthaghar, Discovery Montessori, Lincoln Int'l School)</p>
       <p>Email: <a href="mailto:support@techyatralabs.com">support@techyatralabs.com</a></p>
       <p>Address: Kathmandu, Nepal</p>
       <p>Data Protection Officer: <a href="mailto:dpo@techyatralabs.com">dpo@techyatralabs.com</a></p>
