--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy - Techyatra Labs</title>
+  <title>Privacy Policy - Techyatralabs School Apps</title>
   <style>
     body { background-color: #f9f9f9; color: #333; font-family: "Helvetica Neue", Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; }
     .container { max-width: 800px; margin: 40px auto; background-color: #fff; padding: 30px 40px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
@@ -24,68 +24,93 @@
     <p><em>Last updated: May 14, 2025</em></p>
 
     <h2>Introduction</h2>
-    <p>Welcome to Eurokids Gatthaghar, Discovery Montessori, Lincoln Int'l School ("we", "our", or "us") app developed  by Techyatra Labs. Designed for parents and teachers in Kathmandu, Nepal, to access attendance tracking, billing, homework management, and study materials with ease, our app respects the privacy and security of all users—parents, teachers, and children. This Privacy Policy explains what information we collect, how we use it, with whom we share it, and your choices regarding your data when you use the Euro Kids Gatthaghar mobile application (the "App").</p>
+    <p>
+      Welcome to the multi-school mobile applications developed by Techyatralabs ("we", "our", or "us"), designed to support parents, teachers, and administrators across Nepal. 
+      These apps are currently used by the following schools:
+    </p>
+    <ul>
+      <li>Euro Kids Gatthaghar</li>
+      <li>Lincoln Int'l School</li>
+      <li>Discovery Montessori</li>
+      <li>Rising Kids School</li>
+      <li>NavaPrativa School</li>
+    </ul>
+    <p>
+      Each branded version of the app offers core features such as attendance tracking, billing, homework management, and study materials, while adhering to the same privacy and data protection standards. This Privacy Policy applies to all these school apps (collectively, the "Apps").
+    </p>
 
     <h2>1. Information We Collect</h2>
     <ul>
-      <li><strong>Account Information:</strong> Your name, email, phone number, and role (parent or teacher).</li>
-      <li><strong>Child Information:</strong> Child’s name, date of birth, grade, and attendance records.</li>
-      <li><strong>Billing Details:</strong> Payment method, billing address, transaction history (processed securely via third-party).</li>
-      <li><strong>Homework & Study Materials:</strong> Homework submissions, grades, teacher comments.</li>
-      <li><strong>Device & Usage Data:</strong> Device type, OS version, IP address, usage analytics.</li>
+      <li><strong>Account Information:</strong> Name, email, phone number, and user role (parent, teacher, or administrator).</li>
+      <li><strong>Child Information:</strong> Child’s name, date of birth, grade level, and attendance records.</li>
+      <li><strong>Billing Details:</strong> Payment method, billing address, and transaction history (processed securely via third parties).</li>
+      <li><strong>Homework & Study Materials:</strong> Submissions, grades, and teacher feedback.</li>
+      <li><strong>Device & Usage Data:</strong> Device type, operating system, IP address, and app usage analytics.</li>
     </ul>
 
     <h2>2. How We Use Your Information</h2>
     <ul>
-      <li><strong>Service Delivery & Improvement:</strong> To provide and optimize features.</li>
-      <li><strong>Notifications & Communication:</strong> Attendance alerts, billing reminders, support.</li>
-      <li><strong>Payment Facilitation:</strong> Process subscriptions and refunds.</li>
-      <li><strong>Analytics & Insights:</strong> Analyze usage patterns to enhance functionality.</li>
+      <li><strong>Service Delivery & Improvement:</strong> Provide and optimize app features.</li>
+      <li><strong>Notifications & Communication:</strong> Send attendance alerts, billing reminders, and support messages.</li>
+      <li><strong>Payment Processing:</strong> Facilitate subscriptions, payments, and refunds.</li>
+      <li><strong>Analytics & Insights:</strong> Analyze usage patterns to enhance functionality and performance.</li>
     </ul>
 
     <h2>3. Legal Basis for Processing</h2>
     <ul>
-      <li><strong>Consent:</strong> Explicit consent when registering or using features.</li>
-      <li><strong>Contractual Necessity:</strong> Fulfill service agreement for paid features.</li>
-      <li><strong>Legal Compliance:</strong> Comply with laws (e.g., financial records).</li>
+      <li><strong>Consent:</strong> Given during account registration or feature use.</li>
+      <li><strong>Contractual Necessity:</strong> Required to fulfill educational service agreements.</li>
+      <li><strong>Legal Compliance:</strong> To meet obligations such as financial record-keeping and audits.</li>
     </ul>
 
     <h2>4. Data Sharing and Disclosure</h2>
     <ul>
-      <li><strong>Third-Party Providers:</strong> Payment, hosting, analytics under confidentiality agreements.</li>
-      <li><strong>Legal Requirements:</strong> Comply with laws, court orders, governmental requests.</li>
-      <li><strong>No Sale of Personal Data:</strong> We never sell or rent personal information.</li>
+      <li><strong>Third-Party Providers:</strong> Hosting, analytics, and payment services under confidentiality agreements.</li>
+      <li><strong>Legal Requirements:</strong> Disclosures as mandated by law, court orders, or regulatory authorities.</li>
+      <li><strong>No Sale of Personal Data:</strong> We do not sell or rent personal information to third parties.</li>
     </ul>
 
-    <h2>5. Children’s Privacy & COPPA/GDPR Compliance</h2>
-    <p>We collect children’s data only with parental or teacher direction and verifiable consent, in line with COPPA and GDPR guidelines. For data subjects under 13, we verify parental authorization.</p>
+    <h2>5. Children’s Privacy & COPPA/GDPR-K Compliance</h2>
+    <p>
+      We collect and process children’s data only with verifiable parental or school authority consent, in compliance with COPPA and GDPR-K. Apps intended for users under 13 employ strict access controls.
+    </p>
 
     <h2>6. Cookies and Tracking Technologies</h2>
-    <p>Our App may use cookies and similar technologies to remember preferences, improve performance, and analyze traffic. You may disable non-essential cookies via device settings.</p>
+    <p>
+      Our Apps may use cookies and similar technologies to remember preferences, enhance functionality, and collect usage metrics. You can manage non-essential cookies via your device settings.
+    </p>
 
     <h2>7. Data Security and Retention</h2>
-    <p>We implement encryption, secure authentication, and regular audits to protect your data. We retain data as long as necessary; deletion requests are processed within 30 days, except for legally required records.</p>
+    <p>
+      We implement encryption, secure authentication, and regular security audits. Data is retained only as long as necessary for its intended purpose or as required by law. Deletion requests are processed within 30 days.
+    </p>
 
     <h2>8. Data Breach Notification</h2>
-    <p>In the unlikely event of a data breach, we will notify affected users and authorities within 72 hours of discovery.</p>
+    <p>
+      In case of a data breach, we will notify affected users and relevant authorities within 72 hours of discovery.
+    </p>
 
     <h2>9. Your Rights and Choices</h2>
     <ul>
-      <li><strong>Access & Correction:</strong> View/update your data via the App.</li>
-      <li><strong>Data Portability:</strong> Request export of your data.</li>
+      <li><strong>Access & Correction:</strong> View or update your data via the App or by contacting us.</li>
+      <li><strong>Data Portability:</strong> Request an export of your personal information.</li>
       <li><strong>Deletion & Restriction:</strong> Request deletion or restriction of processing.</li>
-      <li><strong>Marketing Opt‑Out:</strong> Email <a href="mailto:support@techyatralabs.com">support@techyatralabs.com</a>.</li>
+      <li><strong>Marketing Opt-Out:</strong> Email <a href="mailto:support@techyatralabs.com">support@techyatralabs.com</a> to unsubscribe from promotional messages.</li>
     </ul>
 
-    <h2>10. External Links and Third‑Party Sites</h2>
-    <p>Our App may link to third‑party sites. We are not responsible for their content or privacy practices. Please review their policies.</p>
+    <h2>10. Third-Party Links</h2>
+    <p>
+      The Apps may contain links to third-party sites or services. We are not responsible for their content or privacy practices. Please review their policies independently.
+    </p>
 
-    <h2>11. Changes to This Policy</h2>
-    <p>We may update this policy for practice, feature, or legal changes. We will notify you at least 15 days before implementation.</p>
+    <h2>11. Policy Updates</h2>
+    <p>
+      We may update this Privacy Policy to reflect changes in our practices, features, or legal requirements. Any changes will be posted here at least 15 days before they take effect.
+    </p>
 
     <h2>12. Contact Us</h2>
     <div class="contact">
-      <p><strong>Techyatralabs</strong> (Developer of Eurokids Gatthaghar, Discovery Montessori, Lincoln Int'l School)</p>
+      <p><strong>Techyatralabs</strong></p>
       <p>Email: <a href="mailto:support@techyatralabs.com">support@techyatralabs.com</a></p>
       <p>Address: Kathmandu, Nepal</p>
       <p>Data Protection Officer: <a href="mailto:dpo@techyatralabs.com">dpo@techyatralabs.com</a></p>
